yoshimi 1.5.8 M

2018-9-4 Will
* BugFix: instances not showing correct root list.
  GuiThreadMsg for banks in wrong place.
  May have caused crash when opening instances.

2018-9-3 Will
* BugFix: Crash if instrument name just 4 digits.
  Thanks to Kristian for the hint :)

2018-9-1 Will
* BugFix: GUI not setting resonance points.

2018-8-31 Will
* Added CLI SubSynth bandwidth envelope.
* Adjusted help lists.
* Added more CLI error reporting.

2018-8-30 Will
* Added common envelope controls to CLI.
  Not freemode yet.
* Updated help lists.

2018-8-29 Will
* Made CLI help lists more consistent.
* Added CLI overtones entries for sub and pad.
* Added pad 'apply' control to CLI.
* Updated query lists.
* Completed CLI SubSynth main controls.
  Not envelope/filter inserts.


2018-8-28 Will
* Completed CLI part common controls.
* Moved Voice enable down to 8 for compatibility.
* Moved Voice amplitude envelope enable down to 7.

2018-8-27 Will
* Improved CLI fault and context sensitivity.
* Aded more info on CLI prompt.
* Some settings now checked on each CLI loop.
  Will be for checks against external changes.
* Implemented new part 'common' controls list.
* Updated ? lists to include subsynth.
  Also more flexible for later additions.
* Changed NRPN 7 bit command to remove ambiguity.

2018-8-26 Will
* More refinments to CLI command structure.
* Added common stereo, octave, detunes.
* subSynth CLI harmonic anp and bandwidth done :)

2018-8-25 Will
* Identified engines and kit mode in CLI prompt.
* All CLI kit mode controls active.
* Extended CLI parts help to include new controls.
* Improved many enable/disable settings.
* Revised and simplified CLI Mlearn section.

2018-8-24 Will
* Temporary fix to banks selection anomally
  The whole of bank needs review.
* More work on CLI part level controls.

2018-8-20 Will
* Implemented CLI placeholder function fo AddSynth.
* Implemented CLI placeholder function fo SubSynth.
* Implemented CLI placeholder function fo PadSynth.